backport: re PR tree-optimization/36129 (ICE with -fprofile-use)

Backport from mainline:
        2008-05-09  Uros Bizjak  <ubizjak@gmail.com>

        PR tree-optimization/36129
        * tree-ssa-ccp.c: Include value-prof.h.
        (execute_fold_all_builtins): Call gimple_remove_stmt_histograms if
        built-in function was folded to a constant.
        * Makefile.in (tree-ssa-ccp.c): Depend on value-prof.h

From-SVN: r135180